add overlay and hover effects

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 
     <div class="card shadow-lg">
       <div class="card-body">
-        <img src="images/image-equilibrium.jpg" class="card-img-top rounded" alt="Equilibrium Image">
+        <div class="container d-flex p-0">
+          <img src="images/image-equilibrium.jpg" class="card-img-top" alt="Equilibrium Image">
+          
+          <div class="overlay"></div>
+
+          <img src="images/icon-view.svg" class="overlay-img img-fluid" alt="view icon overlay">
+        </div>
 
         <h4 class="card-title font-weight-bold mt-4">Equilibrium #3429</h4>
 
@@ -42,7 +48,7 @@
         <div class="creator-area">
           <img src="images/image-avatar.png" class="rounded-circle mr-3">
           <p class="card-text">
-            Creation of <span class="text-white">Jules Wyvern</span>
+            Creation of <span class="creator-name">Jules Wyvern</span>
           </p>
         </div>
       </div>
