fix Accessibility issues

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <img src="images/icon-view.svg" class="overlay-img img-fluid" alt="view icon overlay">
         </div>
 
-        <h4 class="card-title font-weight-bold mt-4">Equilibrium #3429</h4>
+        <h1 class="card-title font-weight-bold mt-4">Equilibrium #3429</h1>
 
         <p class="card-text mb-3">Our Equilibrium collection promotes balance and calm.</p>
 
@@ -46,7 +46,7 @@
         <hr class="line">
 
         <div class="creator-area">
-          <img src="images/image-avatar.png" class="rounded-circle mr-3">
+          <img src="images/image-avatar.png" class="rounded-circle mr-3" alt="avatar image">
           <p class="card-text">
             Creation of <span class="creator-name">Jules Wyvern</span>
           </p>
